correct spacing in instructor and new col view all section

--- a/src/index.css
+++ b/src/index.css
@@ -110,9 +110,18 @@ body {
   font-size: 16px;
   background-color: #262729;
   color: white;
-  padding: 16px 0 0 0;
+  padding-top: 16px;
   height: 52px;
 }
+
+.colH1OverFlow {
+  font-size: 16px;
+  background-color: #262729;
+  color: white;
+  padding-top: 8px;
+  height: 52px;
+}
+
 .colHeader {
   background-color: #262729;
   border-left: 4px #A72328 solid;
